# us_stock_signal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DISCLAIMER.md  Dockerfile  README.md  docker-compose.yml  docs_vps.md  pyproject.toml
configs/: default.yaml
docs/: strategy_research_log.md
src/us_stock_signal/: __init__.py  backtest.py  cli.py  config.py  execution_policy.py  models.py  pipeline.py  pricing.py  recommender.py  repository.py  runtime_lock.py  scoring_validation.py  storage.py  strategy_search.py  sync.py  sync_guard.py  time_utils.py  tracker.py
src/us_stock_signal/ai/: __init__.py  deepseek.py
src/us_stock_signal/data_providers/: __init__.py  market_data.py  news.py  sec.py  universe.py  yahoo_chart.py
src/us_stock_signal/features/: __init__.py  technical.py
src/us_stock_signal/models_ml/: __init__.py  simple_model.py
src/us_stock_signal/notifiers/: __init__.py  dingtalk.py
src/us_stock_signal/scheduler/: __init__.py  __main__.py  service.py
tests/: test_ai_client.py  test_backtest.py  test_cli.py  test_config.py  test_notifier.py  test_notifier_ai_status.py  test_pricing.py  test_recommender.py  test_repository.py  test_runtime_lock.py  test_scan_summary.py  test_scheduler_service.py  test_scoring_differentiation.py  test_scoring_validation.py  test_storage.py  test_strategy_search.py  test_sync.py  test_sync_guard.py  test_technical_features.py  test_tracker.py  test_universe.py  test_yahoo_chart_provider.py
