[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "us-stock-signal"
version = "0.1.0"
description = "US stock short-term Top10 recommendation and DingTalk alert system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10",
  "duckdb>=1.0",
  "feedparser>=6.0",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
us-stock-signal = "us_stock_signal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

